--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -69,6 +69,11 @@ header {
     cursor: pointer;
 }
 
+.mainMenu a:hover {
+    color: orange;
+    cursor: pointer;
+}
+
 @media (max-width: 780px) {
     header {
         grid-column: 1/3;
