--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -187,6 +187,7 @@ header {
     justify-content: center;
     align-content: center;
     justify-self: center;
+    color: darkslategrey;
 }
 
 .button {
