--- a/public/css/app.css
+++ b/public/css/app.css
@@ -278,3 +278,38 @@ input::-webkit-calendar-picker-indicator {
     color: #febb02;
 
 }
+
+/* =======================
+******* calendarMain ******
+========================*/
+
+.calendarMain {
+    display: grid;
+    grid-template-columns: repeat(7, 50px);
+    justify-content: center;
+    gap: 2px;
+}
+
+.month {
+    padding-left: 48%;
+}
+
+.items {
+    border: solid black 1px;
+    height: 49px;
+    width: 49px;
+    text-align: center;
+}
+
+.weeks {
+    text-align: center;
+}
+
+.input {
+    width: 50%;
+    border: none;
+    padding-left: 40%;
+    margin-top: 20%;
+    background: green;
+    color: white;
+}
