--- a/public/css/calendar.css
+++ b/public/css/calendar.css
@@ -64,3 +64,22 @@ tr {
     background: green;
     color: white;
 }
+
+.button {
+    float: left;
+    margin-top: 2em;
+    margin-left: 39%;
+    background-color: orange;
+    color: blue;
+    margin-bottom: 1em;
+    font-size: 1.2em;
+    transition-duration: 1s;
+
+}
+
+.button:hover {
+    color: white;
+    top: 20px;
+    box-shadow: 5px 5px 0 #3c354a;
+    cursor: pointer;
+}
